# CLASP

./: .gitmodules  CMakeLists.txt  README.md
cmake/: Dependencies.cmake
include/CLASP/: CHANGELOG.md  CMakeLists.txt  NOTICE  spmm_benchmark.cpp
include/CLASP/cmake/: Cuda.cmake
include/CLASP/include/: bm_test_utils.h  cuda_spmm.cuh  wmma_spmm.cuh
include/CLASP/src/: CMakeLists.txt  cuda_spmm.cu  wmma_spmm.cu
include/CLASP/src/spmm_utils/: barrier.h  compute_utils.h  dense_tile.h  memory_aligner.h  output_tile.h  output_tile_base.h  sparse_tile.h
scripts/: bench.py  run.sh
src/: CMakeLists.txt  benchmark_spmm.cpp  cuda_utils.h
src/dataset/: dataset.cpp  dataset.hpp
src/format/: CMakeLists.txt  format.cpp  format.hpp  format_csr.cpp  format_csr.hpp  format_cvs.cpp  format_cvs.hpp  format_cxx.cpp  format_cxx.hpp
src/gemm/: CMakeLists.txt  cublas_gemm.cpp  cublas_gemm.hpp  gemm.cpp  gemm.hpp
src/spmm/: CMakeLists.txt  clasp_spmm.cpp  clasp_spmm.hpp  spmm.cpp  spmm.hpp  sputnik_spmm.cpp  sputnik_spmm.hpp
src/util/: argparse.h  matrix_utils.h  utils.h
